--- a/assignment4/src/main/resources/templates/accountsPage.html
+++ b/assignment4/src/main/resources/templates/accountsPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Bank</title>
@@ -12,7 +12,7 @@ th, td {
 </head>
  
 <body>
-    <!-- Include _menu.html -->
+    Include _menu.html
     <th:block th:include="/_menu"></th:block>
  
     <h2>Accounts</h2>
@@ -31,4 +31,4 @@ th, td {
  
     </table>
 </body>
-</html>
+</html> -->
