--- a/assignment4/src/main/resources/templates/sendMoneyPage.html
+++ b/assignment4/src/main/resources/templates/sendMoneyPage.html
@@ -1,11 +1,11 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
    <head>
       <title>Bank</title>
    </head>
     
    <body>      
-      <!-- Include _menu.html -->
+      Include _menu.html
       <th:block th:include="/_menu"></th:block>
        
       <h2>Send Money</h2>
@@ -36,4 +36,4 @@
       </form>
        
    </body>
-</html>
+</html> -->
