--- a/assignment4/src/main/resources/templates/admin/user2.html
+++ b/assignment4/src/main/resources/templates/admin/user2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" 
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
   <meta charset="utf-8">
@@ -18,56 +18,6 @@
   <!-- Custom styles -->
   <link href="/resources/admin/css/style.css" rel="stylesheet">
   <link href="/resources/admin/css/style-responsive.css" rel="stylesheet" />
-
-
-<!-- <script type="text/javascript">
-function listBookJson(){
-	 alert('Tất cả sách');
-    $.ajax({
-      url : "user/listUser",
-      type : "GET",
-      contentType : "application/json",
-      dataType : 'json',        
-      success : function(data) {
-        if(data.length > 0){
-        	var title = '<table class="table table-striped table-advance table-hover">'
-           				+'<tbody>'
-            			+'<tr>'
-              			+'<th><i class="icon_profile"></i> Full Name</th>'
-              			+'<th><i class="icon_mail_alt"></i> Email</th>'
-              			+'<th><i class=""></i> Active</th>'
-              			+'<th><i class=""></i> Role</th>'
-              			+'<th><i class="icon_cogs"></i> Action</th>'
-           				+' </tr>';
-           for (var i = 0; i < data.length; i++) {
-        	   var row = '<tr>'
-                  		+'<td>'+data[i].firstName+'</td>'
-                   		+'<td>'+data[i].email+'</td>'
-                   		+'<td>'
-                   		+'<input type="checkbox">'
-                   		+'</td>'
-                    	+'<td> admin'
-                   		+'</td>' 
-                   		+'<td>'
-                    	+'<div class="btn-group">'
-                        +'<a class="btn btn-success" href="#" title="Edit book!"><i class="icon_pencil-edit"></i></a>' 
-                        +'<a class="btn btn-danger" href="#" title="Delete book!"><i class="icon_close_alt2"></i></a>'
-                        +'</div>'
-                        +'</td>'
-                 		+'</tr>';
-        	   title = title + row; 		
-           }
-           title = title + '</tbody>'
-           				 + '</table>';
-           $('#result').html(title);
-        }
-        },
-        error: function(){      
-           alert('Lỗi xử lý!');
-          }
-    });
-   }
-</script> -->
 
 </head>
 
@@ -115,7 +65,7 @@ function listBookJson(){
                 <a href="#"><i class="icon_profile"></i> My Profile</a>
               </li>
               <li>
-                <a href="#"><i class="icon_book_alt"></i> My book</a>
+                <a href="#"><i class="icon_mail_alt"></i> My Inbox</a>
               </li>
               <li>
                 <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
@@ -174,10 +124,8 @@ function listBookJson(){
                 Users management
               </header>
               <br><br>
-              <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i>Add User</a>
-               <a class="btn btn-primary" href="javascript:void(0)" onclick="return listBookJson();"><i class="icon_plus_alt2"></i>List User</a>
+              <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i> Add User</a>
 			<br><br>
-			<div id="result">
               <table class="table table-striped table-advance table-hover">
                 <tbody>
                   <tr>
@@ -185,22 +133,15 @@ function listBookJson(){
                     <th><i class="icon_mail_alt"></i> Email</th>
                     <th><i class=""></i> Active</th>
                     <th><i class=""></i> Role</th>
+                    <th><i class=""></i> Avatar</th>
                     <th><i class="icon_cogs"></i> Action</th>
                   </tr>
                   <tr th:each="listUser : ${listUser}">
                     <td th:text="${listUser.firstName}+' '+${listUser.lastName}">..</td>
                     <td th:utext="${listUser.email}"></td>
-                    <td>
-                    	<input type="checkbox" th:checked="${listUser.enabled == 1}">
-                    </td>
-                     <td> 
-                     	<span th:if="${listUser.idRole == 1}" th:text="admin"></span>
-                     	<div th:switch="${listUser.idRole}">
-	           				 <p th:case="1">admin</p>
-	           				  <p th:case="*">mod</p>
-						</div>
-                    </td> 
-                    
+                    <td><input type="checkbox"></td>
+                    <td>Rosser</td>
+                    <td>176-026-5992</td>
                     <td>
                       <div class="btn-group">
                         <a class="btn btn-success" href="#" title="Edit book!"><i class="icon_pencil-edit"></i></a>
@@ -209,8 +150,7 @@ function listBookJson(){
                     </td>
                   </tr>
                 </tbody>
-              </table> 
-              </div>
+              </table>
             </section>
           </div>
         </div>
@@ -227,7 +167,8 @@ function listBookJson(){
   <script src="/resources/admin/js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="/resources/admin/js/scripts.js"></script>
-	<script src="/resources/admin/js/MyJSonAjax.js"></script>
+
+
 </body>
 
 </html>
