--- a/assignment4/src/main/resources/templates/admin/user.html
+++ b/assignment4/src/main/resources/templates/admin/user.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" 
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
   <meta charset="utf-8">
 
-  <title>Users management</title>
+  <title>Users management 3</title>
 
   <!-- Bootstrap CSS -->
   <link href="/resources/admin/css/bootstrap.min.css" rel="stylesheet">
@@ -18,17 +17,38 @@
   <!-- Custom styles -->
   <link href="/resources/admin/css/style.css" rel="stylesheet">
   <link href="/resources/admin/css/style-responsive.css" rel="stylesheet" />
-
-
-<!-- <script type="text/javascript">
-function listBookJson(){
-	 alert('Tất cả sách');
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<style>
+.modal{
+    z-index:10;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    padding-top: 60px;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.8); 
+ }
+ .modal-content {
+    background-color: #fefefe;
+    margin: auto auto  auto 30%;
+    width: 50%;
+    padding-right: 2%;
+    padding-left: 2%;
+}
+</style>
+ <script type="text/javascript">
+ function editUser(idUser){
+	 alert('edit user');
+	 alert(idUser)
     $.ajax({
-      url : "user/listUser",
+      url : "/editUser/"+idUser,
       type : "GET",
       contentType : "application/json",
       dataType : 'json',        
       success : function(data) {
+    	alert('edit success');
         if(data.length > 0){
         	var title = '<table class="table table-striped table-advance table-hover">'
            				+'<tbody>'
@@ -40,17 +60,25 @@ function listBookJson(){
               			+'<th><i class="icon_cogs"></i> Action</th>'
            				+' </tr>';
            for (var i = 0; i < data.length; i++) {
+        	   var check = null;
+        	   var nameRole = 'admin';
+        	   if(data[i].enabled == 1){
+        		   check='checked="checked"';
+        	   }
+        	   if(data[i].idRole != 1){
+        		   nameRole = 'mod';
+        	   }
         	   var row = '<tr>'
-                  		+'<td>'+data[i].firstName+'</td>'
+                  		+'<td>'+data[i].firstName+' '+data[i].lastName+'</td>'
                    		+'<td>'+data[i].email+'</td>'
                    		+'<td>'
-                   		+'<input type="checkbox">'
+                   		+'<input type="checkbox" '+check+'>'
                    		+'</td>'
-                    	+'<td> admin'
+                    	+'<td>'+nameRole
                    		+'</td>' 
                    		+'<td>'
                     	+'<div class="btn-group">'
-                        +'<a class="btn btn-success" href="#" title="Edit book!"><i class="icon_pencil-edit"></i></a>' 
+                        +'<a class="btn btn-success" href="#" title="Edit book!"><i class="icon_pencil-edit"></i></a>'
                         +'<a class="btn btn-danger" href="#" title="Delete book!"><i class="icon_close_alt2"></i></a>'
                         +'</div>'
                         +'</td>'
@@ -60,14 +88,18 @@ function listBookJson(){
            title = title + '</tbody>'
            				 + '</table>';
            $('#result').html(title);
+           $('#msgResult').html('Successfully edit user!');
+        } else{
+        	 $('#result').html("No user");
+        	 $('#msgResult').html('');
         }
         },
         error: function(){      
-           alert('Lỗi xử lý!');
+           alert('error!');
           }
     });
    }
-</script> -->
+ </script>
 
 </head>
 
@@ -106,7 +138,7 @@ function listBookJson(){
                             <span class="profile-ava">
                                 <img alt="" src="/resources/admin/img/avatar1_small.jpg">
                             </span>
-                            <span class="username">Jenifer Smith</span>
+                            <span class="username">admin</span>
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
@@ -173,10 +205,14 @@ function listBookJson(){
               <header class="panel-heading">
                 Users management
               </header>
+              <div style="margin-left: 10px">
               <br><br>
-              <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i>Add User</a>
-               <a class="btn btn-primary" href="javascript:void(0)" onclick="return listBookJson();"><i class="icon_plus_alt2"></i>List User</a>
+              <a class="btn btn-primary" href="javascript:void(0)" onclick="document.getElementById('formAddUser').style.display='block'"><i class="icon_plus_alt2"></i>Add User</a>
+              <a class="btn btn-primary" href="javascript:void(0)" onclick="return listUserJson();"><i class="icon_plus_alt2"></i>List User</a>
+              </div>
+              
 			<br><br>
+			<div id="msgResult" style="margin-left: 10px;color: red; font-size: 20px; font-weight: bold;">  </div><br>
 			<div id="result">
               <table class="table table-striped table-advance table-hover">
                 <tbody>
@@ -194,7 +230,7 @@ function listBookJson(){
                     	<input type="checkbox" th:checked="${listUser.enabled == 1}">
                     </td>
                      <td> 
-                     	<span th:if="${listUser.idRole == 1}" th:text="admin"></span>
+                     	<!-- <span th:if="${listUser.idRole == 1}" th:text="admin"></span> -->
                      	<div th:switch="${listUser.idRole}">
 	           				 <p th:case="1">admin</p>
 	           				  <p th:case="*">mod</p>
@@ -203,8 +239,8 @@ function listBookJson(){
                     
                     <td>
                       <div class="btn-group">
-                        <a class="btn btn-success" href="#" title="Edit book!"><i class="icon_pencil-edit"></i></a>
-                        <a class="btn btn-danger" href="#" title="Delete book!"><i class="icon_close_alt2"></i></a>
+                        <a class="btn btn-success" th:onclick="'editUser(\''+${listUser.idUser}+'\')'" href="#" title="Edit!"><i class="icon_pencil-edit"></i></a>
+                        <a class="btn btn-danger" th:onclick="'deleteUser(\''+${listUser.idUser}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>
                       </div>
                     </td>
                   </tr>
@@ -218,16 +254,94 @@ function listBookJson(){
       </section>
     </section>
   </section>
+      <div id="formAddUser" class="modal text-center">
+           <form class="modal-content animate" name="" method="post"> 
+           <br><h3>ADD NEW USER</h3><br>
+        <table style=" width:100%"  class="">
+        <tr>
+          <td><label ><b>FirstName</b></label></td>
+          <td><input type="text" name="firstName" id="firstName" class="form-control" required></td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         <tr>
+          <td><label ><b>LastName</b></label></td>
+          <td><input type="text" name="lastName" id="lastName" class="form-control" required></td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         <tr>
+          <td><label ><b>Email</b></label></td>
+          <td><input type="email" name="email" id="email" class="form-control" required></td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         
+          <tr>
+          <td><label ><b>Role</b></label></td>
+          <td>
+          	<select name="idRole" id="idRole">
+          		<option value="2">Mod</option>
+          		<option value="1">Admin</option>
+          		
+          	</select>
+          </td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         
+         <tr>
+          <td><label ><b>Password</b></label></td>
+          <td> <input type="password" name="password" id="password" class="form-control" required></td>
+         </tr>
+         <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         <tr>
+          <td><label ><b>Confirm Password</b></label></td>
+          <td> <input type="password" name="rePassword" id="rePassword" class="form-control" required></td>
+         </tr>
+         <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         <tr>
+          <td></td>
+          <td>
+            <input type="button" value="Add" class="btn btn-primary "
+                 onclick=" return addUserJson();">
+            <input type="button" value="Cancel" class="btn btn-danger"
+              onclick="document.getElementById('formAddUser').style.display='none'">
+            
+          </td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+        </table>
+       </form>
+    </div>
+  
   <!-- container section end -->
-  <!-- javascripts -->
-  <script src="/resources/admin/js/jquery.js"></script>
-  <script src="/resources/admin/js/bootstrap.min.js"></script>
-  <!-- nicescroll -->
-  <script src="/resources/admin/js/jquery.scrollTo.min.js"></script>
+  <!-- java scripts -->
+  <script src="/resources/admin/js/jquery.js" type="text/javascript"></script>
+  <script src="/resources/admin/js/bootstrap.min.js" type="text/javascript"></script>
+  <!-- nice scroll -->
+  <script src="/resources/admin/js/jquery.scrollTo.min.js" type="text/javascript"></script>
   <script src="/resources/admin/js/jquery.nicescroll.js" type="text/javascript"></script>
-  <!--custome script for all page-->
-  <script src="/resources/admin/js/scripts.js"></script>
-	<script src="/resources/admin/js/MyJSonAjax.js"></script>
+  <!--custom script for all page-->
+  <script src="/resources/admin/js/scripts.js" type="text/javascript"></script>
+ <script src="/resources/admin/js/MyJSonAjax.js" type="text/javascript"></script> 
 </body>
 
 </html>
