--- a/assignment4/src/main/resources/templates/admin/user.html
+++ b/assignment4/src/main/resources/templates/admin/user.html
@@ -38,68 +38,17 @@
     padding-left: 2%;
 }
 </style>
- <script type="text/javascript">
- function editUser(idUser){
-	 alert('edit user');
-	 alert(idUser)
+<script type="text/javascript">
+function changeStatus(idUser,enabled){
+	 alert('change: '+idUser);
     $.ajax({
-      url : "/editUser/"+idUser,
+      url : "/changeStatus/"+idUser,
       type : "GET",
       contentType : "application/json",
       dataType : 'json',        
-      success : function(data) {
-    	alert('edit success');
-        if(data.length > 0){
-        	var title = '<table class="table table-striped table-advance table-hover">'
-           				+'<tbody>'
-            			+'<tr>'
-              			+'<th><i class="icon_profile"></i> Full Name</th>'
-              			+'<th><i class="icon_mail_alt"></i> Email</th>'
-              			+'<th><i class=""></i> Active</th>'
-              			+'<th><i class=""></i> Role</th>'
-              			+'<th><i class="icon_cogs"></i> Action</th>'
-           				+' </tr>';
-           for (var i = 0; i < data.length; i++) {
-        	   var check = null;
-        	   var nameRole = 'admin';
-        	   if(data[i].enabled == 1){
-        		   check='checked="checked"';
-        	   }
-        	   if(data[i].idRole != 1){
-        		   nameRole = 'mod';
-        	   }
-        	   var row = '<tr>'
-                  		+'<td>'+data[i].firstName+' '+data[i].lastName+'</td>'
-                   		+'<td>'+data[i].email+'</td>'
-                   		+'<td>'
-                   		+'<input type="checkbox" '+check+'>'
-                   		+'</td>'
-                    	+'<td>'+nameRole
-                   		+'</td>' 
-                   		+'<td>'
-                    	+'<div class="btn-group">'
-                        +'<a class="btn btn-success" href="#" title="Edit book!"><i class="icon_pencil-edit"></i></a>'
-                        +'<a class="btn btn-danger" href="#" title="Delete book!"><i class="icon_close_alt2"></i></a>'
-                        +'</div>'
-                        +'</td>'
-                 		+'</tr>';
-        	   title = title + row; 		
-           }
-           title = title + '</tbody>'
-           				 + '</table>';
-           $('#result').html(title);
-           $('#msgResult').html('Successfully edit user!');
-        } else{
-        	 $('#result').html("No user");
-        	 $('#msgResult').html('');
-        }
-        },
-        error: function(){      
-           alert('error!');
-          }
     });
    }
- </script>
+</script>
 
 </head>
 
@@ -217,8 +166,8 @@
               <table class="table table-striped table-advance table-hover">
                 <tbody>
                   <tr>
-                    <th><i class="icon_profile"></i> Full Name</th>
-                    <th><i class="icon_mail_alt"></i> Email</th>
+                    <th><i class=""></i> Full Name</th>
+                    <th><i class=""></i> Email</th>
                     <th><i class=""></i> Active</th>
                     <th><i class=""></i> Role</th>
                     <th><i class="icon_cogs"></i> Action</th>
@@ -227,7 +176,7 @@
                     <td th:text="${listUser.firstName}+' '+${listUser.lastName}">..</td>
                     <td th:utext="${listUser.email}"></td>
                     <td>
-                    	<input type="checkbox" th:checked="${listUser.enabled == 1}">
+                    	<input type="checkbox" th:checked="${listUser.enabled == 1}"  th:onchange="'changeStatus(\''+${listUser.idUser}+'&'+${listUser.enabled}+'\');'">
                     </td>
                      <td> 
                      	<!-- <span th:if="${listUser.idRole == 1}" th:text="admin"></span> -->
@@ -239,7 +188,7 @@
                     
                     <td>
                       <div class="btn-group">
-                        <a class="btn btn-success" th:onclick="'editUser(\''+${listUser.idUser}+'\')'" href="#" title="Edit!"><i class="icon_pencil-edit"></i></a>
+                        <a class="btn btn-success" th:onclick="'showEditUser(\''+${listUser.idUser}+'\')'" href="#" title="Edit!"><i class="icon_pencil-edit"></i></a>
                         <a class="btn btn-danger" th:onclick="'deleteUser(\''+${listUser.idUser}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>
                       </div>
                     </td>
@@ -331,10 +280,79 @@
         </table>
        </form>
     </div>
+    
+    <div id="formEditUser" class="modal text-center">
+           <form class="modal-content animate" name="" method="post"> 
+           <br><h3>EDIT USER</h3><br>
+        <table style=" width:100%"  class="">
+        <tr>
+          <td><input type="hidden" id="idUserEdit" name="idUserEdit"></td>
+          <td><br></td>
+         </tr>
+        <tr>
+          <td><label ><b>FirstName</b></label></td>
+          <td><input type="text" name="firstName" id="firstNameEdit" class="form-control" required></td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         <tr>
+          <td><label ><b>LastName</b></label></td>
+          <td><input type="text" name="lastName" id="lastNameEdit" class="form-control" required></td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         <tr>
+          <td><label ><b>Email</b></label></td>
+          <td><input type="email" name="email" id="emailEdit" class="form-control" disabled="disabled" required></td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         
+          <tr>
+          <td><label ><b>Role</b></label></td>
+          <td>
+          	<select name="idRole" id="idRoleEdit">
+          		<option value="2">Mod</option>
+          		<option value="1">Admin</option>
+          		
+          	</select>
+          </td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+         
+         <tr>
+          <td></td>
+          <td>
+            <input type="button" value="Edit" class="btn btn-primary "
+                 onclick="editUser()">
+                 <!-- onclick="return editUser(10);"  -->
+            <input type="button" value="Cancel" class="btn btn-danger"
+              onclick="document.getElementById('formEditUser').style.display='none'">
+            
+          </td>
+         </tr>
+          <tr>
+          <td><br></td>
+          <td><br></td>
+         </tr>
+        </table>
+       </form>
+    </div>
   
   <!-- container section end -->
   <!-- java scripts -->
   <script src="/resources/admin/js/jquery.js" type="text/javascript"></script>
+  <script src="/resources/admin/js/jquery.validate.min.js" type="text/javascript"></script>
+  
   <script src="/resources/admin/js/bootstrap.min.js" type="text/javascript"></script>
   <!-- nice scroll -->
   <script src="/resources/admin/js/jquery.scrollTo.min.js" type="text/javascript"></script>
