--- a/assignment4/src/main/resources/templates/admin/detailBook.html
+++ b/assignment4/src/main/resources/templates/admin/detailBook.html
@@ -46,7 +46,7 @@
           </li>
           <!-- user login dropdown start-->
           
-          <li class="dropdown" sec:authorize="hasAnyRole('user','admin')">
+          <li class="dropdown" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
                                 <img alt="" src="/resources/img/avatar1_small.jpg">
@@ -56,12 +56,12 @@
                         </a>
             <ul class="dropdown-menu extended logout">
               <!-- <div class="log-arrow-up"></div> -->
-              <li class="eborder-top">
+             <!--  <li class="eborder-top">
                 <a href="#"><i class="icon_profile"></i> My Profile</a>
               </li>
               <li>
                 <a href="#"><i class="icon_book_alt"></i> My book</a>
-              </li>
+              </li> -->
               <li>
                 <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
               </li>
@@ -92,7 +92,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
-              <li><a class="" href="/myBook">My Book</a></li>
+              <li sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')"><a class="" href="/myBook">My Book</a></li>
               <li><a class="" href="/"><span>All Book</span></a></li>
             </ul>
           </li>
@@ -149,51 +149,20 @@
                        COMMENT
                     </a>
                   </li>
-                  <li class="" sec:authorize="hasAnyRole('user','admin')">
+                 <!--  <li class="" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
                     <a data-toggle="tab" href="#edit-profile">
                         <i class="icon-envelope"></i>
                         EDIT BOOK
                     </a>
-                  </li>
+                  </li> -->
                 </ul>
               </header>
               <div class="panel-body">
                 <div class="tab-content">
                   <div id="recent-activity" class="tab-pane active">
                     <div class="profile-activity">
-                      <div class="act-time" style="overflow: inherit;" th:each="objComment : ${listComment}" >
-                        <div class="activity-body act-in">
-                          <span class="arrow"></span>
-                          <div class="text">
-                            <a href="#" class="activity-img"><img class="avatar" src="/resources/img/avatar.jpg" alt=""></a>
-                            <div class="attribution">
-                            	<a href="#" th:text="${objComment.idUser}">..</a>
-                            	<span th:text="${objComment.updatedComment}">..</span>
-        						<div class="top-nav notification-row" style="margin-left: 0px;margin-top: -7px;" sec:authorize="hasAnyRole('user','admin')">
-        							<ul class="">
-          								<li class="dropdown">
-           									<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            					<b class="caret"></b>
-                        				    </a>
-            								<ul style="max-width: 100px !important;min-width: 100px !important; width: 1px !important;top: 25px" class="dropdown-menu extended logout">
-              									<li>
-                									<a style="padding: 5px 5px 5px 5px !important;" href="#"><i class="icon_close_alt2"></i>DELETE</a>
-              									</li>
-             									<li>
-                									<a style="padding: 5px 5px 5px 5px !important;" href="#"><i class="icon_pencil-edit"></i>Edit</a>
-              									</li>
-            								</ul>
-          								</li>
-        						  </ul>
-      							</div>
-                            </div> 
-                            <div><p th:text="${objComment.message}">..</p></div> 
-                            
-                          </div>
-                        </div>
-                      </div>
-                      
-                      <div class="act-time" sec:authorize="hasAnyRole('user','admin')">
+                    
+                      <div class="act-time" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
                       <div class="activity-body act-in">
                       <span class="arrow"></span>
                        <div class="text">
@@ -213,14 +182,48 @@
                         </form>
                         </div>
                       </div>
+                      </div> 
+                    
+                      <div class="act-time" style="overflow: inherit;" th:each="objComment : ${listComment}" id="resultComment" >
+                        <div class="activity-body act-in">
+                          <span class="arrow"></span>
+                          <div class="text">
+                            <a href="#" class="activity-img"><img class="avatar" src="/resources/img/avatar.jpg" alt=""></a>
+                            <div class="attribution">
+                            	<a href="#" th:text="${objComment.idUser}">..</a>
+                            	<span th:text="${objComment.updatedComment}">..</span>
+        						<div class="top-nav notification-row" style="margin-left: 0px;margin-top: -7px;" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
+        							<ul class="">
+          								<li class="dropdown">
+           									<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                            					<b class="caret"></b>
+                        				    </a>
+            								<ul style="max-width: 100px !important;min-width: 100px !important; width: 1px !important;top: 25px" class="dropdown-menu extended logout">
+              									<li>
+                									<a style="padding: 5px 5px 5px 5px !important;" href="#" th:onclick="'deleteComment('+${objComment.idComment}+','+${objComment.idBook}+')'"><i class="icon_close_alt2"></i>DELETE</a>  
+              									</li>
+             									<li>
+                									<a style="padding: 5px 5px 5px 5px !important;" href="#"><i class="icon_pencil-edit"></i>Edit</a>
+              									</li>
+            								</ul>
+          								</li>
+        						  </ul>
+      							</div>
+                            </div> 
+                            <div><p th:text="${objComment.message}">..</p></div> 
+                            
+                          </div>
+                        </div>
                       </div>
+                      
+                     
                       
                       
                     </div>
                   </div>
                   <!-- profile -->
                   <!-- edit-profile -->
-                  <div id="edit-profile" class="tab-pane" th:each="objBook : ${objBook}" sec:authorize="hasAnyRole('user','admin')">
+                  <!-- <div id="edit-profile" class="tab-pane" th:each="objBook : ${objBook}" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
                     <section class="panel">
                       <div class="panel-body bio-graph-info">
                         <h1>Edited Book Information</h1>
@@ -252,7 +255,7 @@
                         </form>
                       </div>
                     </section>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </section>
