--- a/assignment4/src/main/resources/templates/admin/user.html
+++ b/assignment4/src/main/resources/templates/admin/user.html
@@ -81,7 +81,7 @@
             </a>
           </li>
           <!-- user login dropdown start-->
-          <li class="dropdown" sec:authorize="hasAnyRole('user','admin')">
+          <li class="dropdown" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="profile-ava">
                                 <img alt="" src="/resources/img/avatar1_small.jpg">
@@ -91,12 +91,12 @@
                         </a>
             <ul class="dropdown-menu extended logout" >
               <!-- <div class="log-arrow-up"></div> -->
-              <li class="eborder-top">
+              <!-- <li class="eborder-top">
                 <a href="#"><i class="icon_profile"></i> My Profile</a>
               </li>
               <li>
                 <a href="#"><i class="icon_book_alt"></i> My book</a>
-              </li>
+              </li> -->
               <li>
                 <a href="/logout"><i class="icon_key_alt"></i> Log Out</a>
               </li>
@@ -127,7 +127,7 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
-              <li sec:authorize="hasAnyRole('user','admin')"><a class="" href="/myBook">My Book</a></li>
+              <li sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')"><a class="" href="/myBook">My Book</a></li>
               <li><a class="" href="/"><span>All Book</span></a></li>
             </ul>
           </li>
@@ -153,28 +153,28 @@
               <header class="panel-heading">
                 Users management
               </header>
-              <div style="margin-left: 10px">
+              <div style="margin-left: 10px" sec:authorize="hasAnyRole('ROLE_ADMIN')">
               <br><br>
-              <a class="btn btn-primary" href="javascript:void(0)" onclick="document.getElementById('viewFormAddUser').style.display='block'"><i class="icon_plus_alt2"></i>ADD NEW USER</a>
-              <a class="btn btn-primary" href="javascript:void(0)" onclick="return listUserJson();"><i class="icon_plus_alt2"></i>ALL USER</a>
+              <a sec:authorize="hasAnyRole('ROLE_ADMIN')" class="btn btn-primary" href="javascript:void(0)" onclick="document.getElementById('viewFormAddUser').style.display='block'"><i class="icon_plus_alt2"></i>ADD NEW USER</a>
+              <!-- <a class="btn btn-primary" href="javascript:void(0)" onclick="return listUserJson();"><i class="icon_plus_alt2"></i>ALL USER</a> -->
               <br><br>
               </div>
               
-			<div id="msgResult" style="margin-left: 10px;color: red; font-size: 20px; font-weight: bold;">  </div><br>
+			<div id="msgResult" style="margin-left: 10px; font-size: 20px; font-weight: bold;">  </div><br>
 			<div id="result">
               <table class="table table-striped table-advance table-hover">
                 <tbody>
                   <tr>
                     <th><i class=""></i> Full Name</th>
                     <th><i class=""></i> Email</th>
-                    <th><i class=""></i> Active</th>
+                    <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class=""></i> Active</th>
                     <th><i class=""></i> Role</th>
-                    <th><i class="icon_cogs"></i> Action</th>
+                    <th sec:authorize="hasAnyRole('ROLE_ADMIN')"><i class="" ></i> Action</th>
                   </tr>
                   <tr th:each="listUser : ${listUser}">
                     <td th:text="${listUser.firstName}+' '+${listUser.lastName}">..</td>
                     <td th:text="${listUser.email}"></td>
-                    <td>
+                    <td sec:authorize="hasAnyRole('ROLE_ADMIN')">
                     	<input type="checkbox" th:checked="${listUser.enabled == 1}" th:onclick="'changeStatus('+${listUser.idUser}+','+${listUser.enabled}+')'">          
                     </td>
                     <!--  
@@ -188,10 +188,10 @@
 						</div>
                     </td> 
                     
-                    <td>
+                    <td sec:authorize="hasAnyRole('ROLE_ADMIN')">
                       <div class="btn-group">
                         <a  class="btn btn-success" th:onclick="'showEditUser(\''+${listUser.idUser}+'\')'" href="#" title="Edit!"><i class="icon_pencil-edit"></i></a>
-                        <a   class="btn btn-danger" th:onclick="'deleteUser(\''+${listUser.idUser}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>
+                        <a  class="btn btn-danger" th:onclick="' deleteUser(\''+${listUser.idUser}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>    
                       </div>
                     </td>
                   </tr>
@@ -205,7 +205,7 @@
       </section>
     </section>
   </section>
-      <div id="viewFormAddUser" class="modal text-center">
+      <div id="viewFormAddUser" class="modal text-center" sec:authorize="hasAnyRole('ROLE_ADMIN')">
            <form class="modal-content animate" id="formAddUser"  name="formAddUser">
            <div class="">
 						<button type="button" class="close" onclick="document.getElementById('viewFormAddUser').style.display='none'" >&times;</button>
@@ -285,7 +285,7 @@
        </form>
     </div>
     
-    <div id="viewFormEditUser" class="modal text-center">
+    <div id="viewFormEditUser" class="modal text-center" sec:authorize="hasAnyRole('ROLE_ADMIN')">
            <form class="modal-content animate" id="formEditUser" name="formEditUser">
            <div class="">
 						<button type="button" class="close" onclick="document.getElementById('viewFormAddUser').style.display='none'" >&times;</button>
