--- a/assignment4/src/main/resources/templates/admin/login.html
+++ b/assignment4/src/main/resources/templates/admin/login.html
@@ -29,7 +29,7 @@
         <p th:text="${message}" style="color: red; font-size: 20px; font: bold;">...</p>
         <div class="input-group">
           <span class="input-group-addon"><i class="icon_profile"></i></span>
-          <input type="email" class="form-control" name="email" id="email" placeholder="email" autofocus>
+          <input type="text" class="form-control" name="email" id="email" placeholder="Email" autofocus>
         </div>
         <div class="input-group">
           <span class="input-group-addon"><i class="icon_key_alt"></i></span>
