--- a/assignment4/src/main/resources/templates/admin/myBook.html
+++ b/assignment4/src/main/resources/templates/admin/myBook.html
@@ -108,10 +108,10 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     <!--header end-->
 
     <!--sidebar start-->
-    <aside sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
+   <aside sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
       <div id="sidebar" class="nav-collapse ">
         <!-- sidebar menu start-->
-        <ul class="sidebar-menu">
+        <ul class="sidebar-menu" >
           <li class="" sec:authorize="hasAnyRole('ROLE_ADMIN')">
             <a class="" href="/admin/allUser">
                           <i class="fa fa-users"></i>
@@ -147,10 +147,10 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
       <section class="wrapper">
        <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="fa fa-book"></i>Books management</h3>
-            <ol class="breadcrumb" sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')">
+            <h3 class="page-header"><i class="fa fa-book"></i>MyBooks management</h3>
+            <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="/">Home</a></li>
-              <li><i class="fa fa-book"></i>All book</li>
+              <li><i class="fa fa-book"></i>My book</li>
             </ol>
           </div>
         </div>
@@ -161,7 +161,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                <br>
              	 <a class="btn btn-primary" href="javascript:void(0)" onclick="document.getElementById('viewFormAddBook').style.display='block'"><i class="icon_plus_alt2"></i> ADD NEW BOOK</a>   
 				<br>
-			  </div>
+			</div>
              <div id="msgResult" style="margin-left: 10px;color: blue; font-size: 20px; font-weight: bold;">  </div><br>
               <div id="result">
               <table class="table table-striped table-advance table-hover">
@@ -185,8 +185,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                     <td>
                       <div class="btn-group">
                       	<a class="btn btn-warning" th:href="@{'/detailBook/' + ${listBook.idBook}}" title="Detail!"><i class="icon_camera_alt"></i></a>
-                        <a sec:authorize="hasAnyRole('ROLE_ADMIN')" class="btn btn-success" th:onclick="'showEditBook(\''+${listBook.idBook}+'\')'" href="#" title="Edit!"><i class="icon_pencil-edit"></i></a>    
-                      	<a sec:authorize="hasAnyRole('ROLE_ADMIN')" class="btn btn-danger" th:onclick="' deleteBook(\''+${listBook.idBook}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>
+                        <a sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')" class="btn btn-success" th:onclick="'showEditBook(\''+${listBook.idBook}+'\')'" href="#" title="Edit!"><i class="icon_pencil-edit"></i></a>    
+                      	<a sec:authorize="hasAnyRole('ROLE_USER','ROLE_ADMIN')" class="btn btn-danger" th:onclick="' deleteBook(\''+${listBook.idBook}+'\')'" href="#" title="Delete!"><i class="icon_close_alt2"></i></a>
                       </div>
                     </td>
                   </tr>
