--- a/assignment4/src/main/resources/templates/admin/myBook.html
+++ b/assignment4/src/main/resources/templates/admin/myBook.html
@@ -36,6 +36,10 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
     padding-right: 2%;
     padding-left: 2%;
     border-radius: 10px;
+    
+}
+.hidden {
+   display:none;
 }
 </style>
 
@@ -43,6 +47,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 </head>
 
 <body>
+<input id="checkAdmin" type="hidden" sec:authorize="hasAnyRole('ROLE_ADMIN')" value="isAdmin"/>
   <!-- container section start -->
   <section id="container" class="">
     <!--header start-->
@@ -162,7 +167,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
              	 <a class="btn btn-primary" href="javascript:void(0)" onclick="document.getElementById('viewFormAddBook').style.display='block'"><i class="icon_plus_alt2"></i> ADD NEW BOOK</a>   
 				<br>
 			</div>
-             <div id="msgResult" style="margin-left: 10px;color: blue; font-size: 20px; font-weight: bold;">  </div><br>
+			<br>
+             <div id="msgResult" style="margin-left: 10px;color: blue; font-size: 20px; font-weight: bold;"></div><br>
               <div id="result">
               <table class="table table-striped table-advance table-hover">
                 <tbody>
